# iris-assistant

./: Cargo.toml  README.md
gui/: main.rs  shortcuts.rs
lib/: main.rs  openai.rs  prompts.rs
